force-app/main/default/objects/eqAnswer__c/eqAnswer__c.object-meta.xml
<CustomObject>
    <description>2019/10/17
Salesforce認定資格対策用オブジェクト
【解答データ格納用】</description>
    <label>資格試験解答</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>A-No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>