force-app/main/default/objects/eqAnswer__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>設問を入力</description>
    <label>選択肢</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>