force-app/main/default/objects/eqAnswer__c/fields/eqQuestion__c.field-meta.xml
<CustomField>
    <fullName>eqQuestion__c</fullName>
    <label>資格試験(参照先)</label>
    <referenceTo>eqQuestion__c</referenceTo>
    <relationshipLabel>資格試験解答一覧</relationshipLabel>
    <relationshipName>Answer2Question</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>