force-app/main/default/objects/eqAnswer__c/fields/isAnswer__c.field-meta.xml
<CustomField>
    <fullName>isAnswer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>正解：True</description>
    <label>正解判定</label>
    <type>Checkbox</type>
</CustomField>