force-app/main/default/objects/eqAnswer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>eqQuestion__c</columns>
    <columns>Answer__c</columns>
    <columns>isAnswer__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>